# qbus

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: coverage.cmake
dmux/: CMakeLists.txt  common.cpp  common.h  connector.cpp  connector.h  dmux.cpp  exceptions.h  locker.cpp  locker.h  memory.cpp  memory.h  message.cpp  message.h  queue.cpp  queue.h
examples/: CMakeLists.txt  bus_consumer.cpp  bus_multi_consumer.cpp  bus_multi_producer.cpp  bus_producer.cpp  client.cpp  connector_consumer.cpp  consumer.cpp  multi_client.cpp  multi_consumer.cpp  multi_producer.cpp  multi_server.cpp  pingpong.cpp  producer.cpp  server.cpp  smart_connector.cpp
examples/logger/: CMakeLists.txt  client.cpp  logger.cpp
qbus/: CMakeLists.txt  bus.cpp  bus.h  common.cpp  common.h  connector.cpp  connector.h  exceptions.h  locker.cpp  locker.h  memory.cpp  memory.h  message.cpp  message.h  qbus.cpp  queue.cpp  queue.h  service_message.h
qbus_tests/: CMakeLists.txt  qbus_queue_test.cpp
qbus_way/: CMakeLists.txt  message.cpp  message.h  queue.cpp  queue.h
tests/: CMakeLists.txt  bus_test.cpp  connector_test.cpp  ipc_bus_test_1.cpp  ipc_connector_test_1.cpp  ipc_connector_test_2.cpp  ipc_connector_test_3.cpp  ipc_connector_test_4.cpp  ipc_connector_test_5.cpp  ipc_test.cpp  ipc_test.gnuplot  ipc_test.h  ipc_test_1.cpp  ipc_test_2.cpp  ipc_test_3.cpp  ipc_test_4.cpp  ipc_test_5.cpp  queue_test.cpp  shared_queue_test.cpp  smart_shared_queue_test.cpp  test_bus_consumer.cpp  test_bus_producer.cpp  test_client.cpp  test_connector_consumer.cpp  test_consumer.cpp  test_producer.cpp  test_server.cpp  unreadable_shared_queue_test.cpp
