################################################################################
# Examples
################################################################################
include_directories(..)
add_executable(connector_producer connector_producer.cpp)
target_link_libraries(connector_producer qbus)
add_executable(connector_consumer connector_consumer.cpp)
target_link_libraries(connector_consumer qbus)
add_executable(connector_multi_producer connector_multi_producer.cpp)
target_link_libraries(connector_multi_producer qbus)
add_executable(connector_multi_consumer connector_multi_consumer.cpp)
target_link_libraries(connector_multi_consumer qbus)
add_executable(smart_connector smart_connector.cpp)
target_link_libraries(smart_connector qbus)
add_executable(pingpong pingpong.cpp)
target_link_libraries(pingpong qbus)
add_executable(bus_producer bus_producer.cpp)
target_link_libraries(bus_producer qbus)
add_executable(bus_consumer bus_consumer.cpp)
target_link_libraries(bus_consumer qbus)
add_executable(bus_multi_producer bus_multi_producer.cpp)
target_link_libraries(bus_multi_producer qbus)
add_executable(bus_multi_consumer bus_multi_consumer.cpp)
target_link_libraries(bus_multi_consumer qbus)
add_subdirectory(logger)