################################################################################
# Logger - server
################################################################################
add_executable(logger logger.cpp)
target_link_libraries(logger zmq qbus)

################################################################################
# Logger - client
################################################################################
add_executable(client client.cpp)
target_link_libraries(client zmq qbus)
